Improve live reload experience of external artifacts on dev mode
Add new extensible file manager implementations for the Java compilation provider, the main goal is to separate the static classpath from the reloadable one, this approach is more efficient than reopen the file manager before every compilation task, as only the reloadable part will be reset.

Add integration tests of external reloadable artifacts feature for: Java, Kotlin & Scala.

Fix: #27242